# otus_cpp_10

./: .travis.yml  CMakeLists.txt  bulk.cpp  bulk.h  input.sh  main.cpp  readme.md
